# toggle

./: #main.cpp#  .gitignore  CMakeLists.txt  PKGBUILD  README.md  main.cpp  toggle  toggle.desktop  toggle.desktop.in  toggle.txt
config/: toggle.conf
